[build-system]
requires = [ "setuptools>=61.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "pyimagej"
version = "1.2.2.dev0"
authors = [
    {name = "ImageJ2 developers", email = "ctrueden@wisc.edu"},
]
description = "Python wrapper for ImageJ"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
# Ensure any changes made to this list are also added to environment.yml AND dev-environment.yml AND README.md!
dependencies = [
    "imglyb >= 2.0.1",
    "jgo >= 1.0.3",
    "jpype1 >= 1.3.0",
    "labeling >= 0.1.12",
    "matplotlib",
    "numpy",
    "scyjava >= 1.6.0",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/imagej/pyimagej"
"Bug Tracker" = "https://github.com/imagej/pyimagej/issues"
Documentation = "https://pyimagej.readthedocs.io/en/latest/"
repository = "https://github.com/imagej/pyimagej"

[project.scripts]
imagej = "imagej:imagej_main"

[project.optional-dependencies]
# Ensure any changes made to this list are also added to dev-environment.yml!
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "myst-nb",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx_rtd_theme",
]

[tool.setuptools]
platforms = ["any"]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
exclude = 'dist|doc'

[tool.isort]
profile = "black"
skip = ["doc"]

