[build-system]
requires = [ "setuptools>=61.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "pyimagej"
version = "1.4.1"
description = "Python wrapper for ImageJ"
license = {text = "Apache-2.0"}
authors = [{name = "ImageJ2 developers", email = "ctrueden@wisc.edu"}]
readme = "README.md"
keywords = ["java", "imagej", "imagej2", "fiji"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.7"
dependencies = [
    "imglyb >= 2.1.0",
    "jgo >= 1.0.3",
    "jpype1 >= 1.3.0",
    "labeling >= 0.1.12",
    "numpy",
    "scyjava >= 1.8.0",
    "xarray",
]

[project.optional-dependencies]
# NB: Keep this in sync with dev-environment.yml!
# Development tools
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "myst-nb",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx_rtd_theme",
    "validate-pyproject[all]",
]
# Matplotlib display backend
matplotlib = [
    "matplotlib",
]
# Notebook dependencies
notebooks = [
    "ipywidgets",
    "jupyter_contrib_nbextensions",
    "notebook",
    "pooch", # for scikit image
    "scikit-image",
]

[project.scripts]
imagej = "imagej:imagej_main"

[project.urls]
homepage = "https://github.com/imagej/pyimagej"
documentation = "https://pyimagej.readthedocs.io/"
source = "https://github.com/imagej/pyimagej"
download = "https://pypi.org/project/pyimagej/"
tracker = "https://github.com/imagej/pyimagej/issues"

[tool.setuptools]
platforms = ["any"]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
exclude = 'dist|doc'

[tool.isort]
profile = "black"
skip = ["doc"]

[tool.pytest.ini_options]
addopts = "--ignore=docs"
