[metadata]
name = pyimagej
author = ImageJ2 developers
author_email = ctrueden@wisc.edu
description = Python wrapper for ImageJ
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
url = https://github.com/imagej/pyimagej
platforms = ['any']
project_urls =
    Bug Tracker = https://github.com/imagej/pyimagej/issues
    Documentation = https://github.com/imagej/pyimagej/blob/master/README.md
    Source Code = https://github.com/imagej/pyimagej
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src

# Ensure any changes made to this list are also added to environment.yml AND dev-environment.yml!
python_requires = >= 3.7
install_requires =
    imglyb >= 2.0.1
    jgo >= 1.0.3
    jpype1 >= 1.3.0
    labeling >= 0.1.12
    matplotlib
    numpy
    scyjava >= 1.6.0
    xarray

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imagej = imagej:imagej_main

[options.extras_require]

# Ensure any changes made to this list are also added to dev-environment.yml!
dev =
    black
    build
    pytest
    sphinx
    sphinx_rtd_theme
